--- a/basic-month-name.html
+++ b/basic-month-name.html
@@ -1,5 +1,11 @@
 <!--
 Shows a culture's name for a given month.
+
+To the degree possible, all language/culture-specific aspects of this component
+are localizable with the Globalize library (https://github.com/jquery/globalize).
+
+@element basic-month-name
+@demo http://basic-web-components.github.io/components/basic-month-name/
 -->
 
 <link rel="import" href="../basic-element/basic-element.html">
@@ -40,14 +46,27 @@ BasicMonthName = {
 
 Polymer( "basic-month-name", {
   
-  applyAuthorStyles: true,
+  /**
+   * The Globalize culture/language assigned to this element.
+   *
+   * @property culture
+   */
+  culture: null,
 
   cultureChanged: function() {
     // Force update of month name.
     this.monthChanged();
   },
 
-  // The index of the month to show: 0 = January, 1 = February, etc.
+  /**
+   * The index of the month to show: 0 = January, 1 = February, etc.
+   *
+   * @attribute month
+   * @type integer
+   * @default The index of the current month
+   */
+  month: null,
+
   monthChanged: function() {
     culture = this.culture;
     monthNameEnum = culture ? culture.calendar.months.names : BasicMonthName.names;
